PYTHON
1.Function print
In python 2 print ("hello")
In python 3 print "hello"
 ex:
print 'Hello, Geeks'      # Python 3.x doesn't support 
print('Hope You like these facts') 
  
''' 
Output in Python 2.x : 
Hello, Geeks 
Hope You like these facts 
  
Output in Python 3.x : 
File "a.py", line 1 
    print 'Hello, Geeks' 
                       ^ 
SyntaxError: invalid syntax 

2.division of integers
In python2 it dosent return a float value.ex-7/5=1
In python3 it  returns a float value.ex-7/5=1.4

3.Iterations
In python2 xrange() function is used for iterations.
In python3 range() function is used for iterations.

EX:for x in xrange(1, 5): 
    print(x), 
  
for x in range(1, 5): 
    print(x), 
  
''' 
Output in Python 2.x 
1 2 3 4 1 2 3 4 
  
Output in Python 3.x 
NameError: name 'xrange' is not defined 


4.Exceptions
In python2 exceptions are enclosed in notations.
In python3 exceptions are enclosed in parenthesis.

5.Global variables
In python2 the value of global variables change in a for loop
In python3 the value of global variables never change

6.Unicode
In Python 3, default storing of strings is Unicode.
In Python 2 ,To store Unicode string value, you require to define them with "u". 





Different IDES used in python
1.Eclipse + PyDev
2.Sublime Text
3.Atom
4.GNU Emacs
5.Vi / Vim



Different tools for different domains.

1.Account Information -	Provides a snapshot of product usage for an account
2.Brand Monitor -	Monitor new domain registrations for specific keywords
3.Domain Reputation -	Provides risk scores based on a domain's proximity to known-bad domains
4.Domain Risk Score -	Provides risk scores and threat predictions based on DomainTools Proximity and Threat Profile algorithms
5.Domain Search -	Searches active and deleted domain names that match a query string
6.Hosting History -	Provides the registrar, IP and name server history for a domain name
7.IP Monitor -	Receive notification when there are new and/or deleted domains on a given IP Address
8.IP Registrant Monitor -	Receive notification when specific people or organizations are allocated new IP ranges or have existing ranges de-allocated

8.Name Server Monitor -	Receive notification when there are new and/or deleted domains on a given Domain Name Server

9.Registrant Monitor- 	Receive notification when specific people or organizations register, renew or delete domain names
10.Reverse IP -	List of domains that share the same network host

